# v0lur

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLEANUP_GUIDE.md  CRITICAL_ISSUES.md  IMPROVEMENT_AREAS.md  MILESTONE_7_EVALUATION_PLAN.md  Makefile  PR_DESCRIPTION.md  README.md  README_UI.md  SPEC_GAP_ANALYSIS.md  SYSTEM_REVIEW_REPORT.md  UPDATED_GAP_ANALYSIS.md  WARP.md  WARP.md.backup  data_loaders.py  demo_ui.py  formatting.py  nav_job_scraper.py  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.in  requirements.in  requirements.txt  telegram_analyzer.py  textual_ui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.reports/: debloating_summary.md  freeze.pre.txt  sitepackages.pre.txt  sitepackages.summary.txt  spec_warp_alignment.csv  spec_warp_alignment.json
config/: aliases.json  config.yaml  old2_aliases.json  old_aliases.json  topics.json
data/: mini_test.json  s.json  sample_channel.json
data/gold_standard/: annotation_guidelines.md  sample_annotations.json
docs/: spec.md
scripts/: dedupe_charlie_kirk.py  diff_spec_warp.py  verify_warp.py
scripts/evaluation/: evaluate.py
scripts/evaluation/metrics/: attribution_metrics.py  entity_metrics.py  error_analysis.py  stance_metrics.py
src/raigem0n/: __init__.py  checkpoint_manager.py  cli.py  config.py  data_loader.py  safe_bertopic.py
src/raigem0n/processors/: __init__.py  discovery_topic_processor.py  links_processor.py  ner_processor.py  quote_processor.py  sentiment_processor.py  stance_processor.py  style_processor.py  topic_processor.py  toxicity_processor.py
tests/: test_checkpoint_manager.py  test_config.py  test_ner_fix.py  test_sentiment_processor.py  test_toxicity_processor.py
